syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.obecto.perper.protobuf";
option csharp_namespace = "Perper.Protocol.Protobuf";

package perper;

service Fabric {
  rpc StreamTriggers (StreamTriggerFilter) returns (stream StreamTrigger) {}
  rpc WorkerTriggers (WorkerTriggerFilter) returns (stream WorkerTrigger) {}
  rpc StreamUpdates (StreamUpdateFilter) returns (stream StreamUpdate) {}
}

message StreamTriggerFilter {
    optional string delegate = 1;
}

message StreamTrigger {
    required string delegate = 1;
    required string stream = 2;
}

message WorkerTriggerFilter {
    optional string workerDelegate = 1;
}

message WorkerTrigger {
    required string workerDelegate = 1;
    required string stream = 2;
    required string worker = 3;
}

message StreamUpdateFilter {
    optional string delegate = 1;
    optional string stream = 2;
}

message StreamUpdate {
    required string delegate = 1;
    required string stream = 2;

    message ItemUpdate {
        required string parameter = 1;
        required string parameterStream = 2;
        required int64 parameterStreamItem = 3;
    }

    message WorkerResult {
        required string worker = 1;
    }

    oneof update {
        ItemUpdate itemUpdate = 3;
        WorkerResult workerResult = 4;
    }
}
